fix: replace isBlank() with isEmpty() for better string validation